<resources>
    <string name="app_name">PortaMed</string>
    <string name="title_overview">Overview</string>
    <string name="title_dashboard">Add medicine</string>
    <string name="title_notifications">Reminders</string>
    <string name="descriptive_image_of_medicine">descriptive image of medicine</string>
    <string name="dosageform">dosageForm</string>
    <string name="friendlyname">friendlyName</string>
    <string name="activeingredient">activeIngredient</string>
    <string name="add_medicine_description_text">You can add medications here, either by using the rvg-number(in a future version) or by supplying the details manually</string>
    <string name="recognizable_name_label">Recognizable name (only visible for you):</string>
    <string name="recognizable_name_hint">enter a name here</string>
    <string name="rvg_number_label">rvg number:</string>
    <string name="rvg_number_hint">enter rvg number here (in the future)</string>
    <string name="active_ingredient_label">active ingredient:</string>
    <string name="active_ingredient_hint">enter the active ingredient here</string>
    <string name="brand_label">brand:</string>
    <string name="brand_hint">enter the name of the brand here</string>
    <string name="dosage_form_labell">dosage form:</string>
    <string name="dosage_form_hint">enter the dosage form here</string>
    <string name="add_medicine_button">Add medicine</string>
    <string name="medicine_added_toast">Medicine added!</string>
    <string name="no_friendly_name_alert_title">Field not filled</string>
    <string name="no_friendly_name_alert_message">You need to enter a recognizable name</string>
    <string name="add_image_to_medicine">Add image to medicine</string>
    <string name="image_dialog_title">How would you like to select an image?</string>
    <string name="take_photo">Take a photo</string>
    <string name="pick_photo">Pick a photo form gallery</string>
    <string name="Cancel">Cancel</string>
</resources>