<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_medicine.AddMedicineFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/add_medicine_form_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_medicine_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/add_medicine_description_text"
                android:textSize="20sp" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/friendly_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/recognizable_name_label"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/friendly_name_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/recognizable_name_hint"
                android:inputType="textShortMessage" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/rvg_number_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/rvg_number_label"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/rvg_number_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/rvg_number_hint"
                android:inputType="number" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/active_ingredient_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/active_ingredient_label"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/active_ingredient_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/active_ingredient_hint"
                android:inputType="textShortMessage" />

            <TextView
                android:id="@+id/brand_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/brand_label"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/brand_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/brand_hint"
                android:inputType="textShortMessage" />

            <TextView
                android:id="@+id/dosage_form_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dosage_form_labell"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/dosage_form_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/dosage_form_hint"
                android:inputType="textShortMessage" />

            <Button
                android:id="@+id/image_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_image_to_medicine" />

            <Button
                android:id="@+id/add_medicine_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:text="@string/add_medicine_button"
                app:layout_constraintTop_toBottomOf="@+id/dosage_form_input" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>