<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_overview">

    <fragment
        android:id="@+id/navigation_overview"
        android:name="nl.tschuller.portamed.ui.overview.OverviewFragment"
        android:label="@string/title_overview"
        tools:layout="@layout/fragment_overview" />

    <fragment
        android:id="@+id/navigation_add_medicine"
        android:name="nl.tschuller.portamed.ui.add_medicine.AddMedicineFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_add_medicine" />

    <fragment
        android:id="@+id/navigation_reminders"
        android:name="nl.tschuller.portamed.ui.reminders.RemindersFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_reminders" />
</navigation>